--- a/index.html
+++ b/index.html
@@ -87,8 +87,43 @@
 
         <div class="project-container">
           <div class="project-description">
-            <h2>Rubik's Slide</h2>
+            <h2>VSet</h2>
             <div class="image-container">
+              <img
+                src="images/vset_screen.png"
+                alt="Screenshot of VSet project."
+                width="75%"
+                loading="lazy"
+              />
+            </div>
+            <p>
+              A clone of SET, which is my favorite card game. SET is a pattern
+              matching game with some interesting maths behind it. Built with
+              Vue.
+            </p>
+            <div class="link-container">
+              <a
+                class="link-button"
+                href="https://chrislopez28.github.io/vset"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Play</a
+              >
+              <a
+                class="link-button"
+                href="https://github.com/chrislopez28/vset"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Github</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="project-container">
+          <div class="project-description">
+            <h2>Rubik's Slide</h2>
+            <!-- <div class="image-container">
               <video width="60%" autoplay loop muted>
                 <source
                   src="images/rubiks_slide_screen.webm"
@@ -96,7 +131,7 @@
                 />
                 Video not supported
               </video>
-            </div>
+            </div> -->
             <p>
               Kind of like a 2D Rubik's Cube, but not exactly. You have to
               "slide" the colors on the 3x3 grid so that it matches the target.
@@ -148,41 +183,6 @@
               <a
                 class="link-button"
                 href="https://github.com/chrislopez28/literary-openings"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Github</a
-              >
-            </div>
-          </div>
-        </div>
-
-        <div class="project-container">
-          <div class="project-description">
-            <h2>VSet</h2>
-            <div class="image-container">
-              <img
-                src="images/vset_screen.png"
-                alt="Screenshot of VSet project."
-                width="75%"
-                loading="lazy"
-              />
-            </div>
-            <p>
-              A clone of SET, which is my favorite card game. SET is a pattern
-              matching game with some interesting maths behind it. Built with
-              Vue.
-            </p>
-            <div class="link-container">
-              <a
-                class="link-button"
-                href="https://chrislopez28.github.io/vset"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Play</a
-              >
-              <a
-                class="link-button"
-                href="https://github.com/chrislopez28/vset"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Github</a
