Changed animated gifs to static pngs for faster loading

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 href="https://chrislopez28.github.io/vset"
                 target="_blank"
                 rel="noopener noreferrer"
-                >Play</a
+                >App Link</a
               >
               <a
                 class="link-button"
@@ -124,7 +124,7 @@
           <div class="project-description">
             <h2>Rubik's Slide</h2>
             <!-- <div class="image-container">
-              <video width="60%" autoplay loop muted>
+              <video width="60%" controls>
                 <source
                   src="images/rubiks_slide_screen.webm"
                   type="video/webm"
@@ -132,6 +132,14 @@
                 Video not supported
               </video>
             </div> -->
+            <div class="image-container">
+              <img
+                src="images/rubiks_slide.PNG"
+                alt="Screenshot of Rubik's Slide App."
+                width="50%"
+                loading="lazy"
+              />
+            </div>
             <p>
               Kind of like a 2D Rubik's Cube, but not exactly. You have to
               "slide" the colors on the 3x3 grid so that it matches the target.
@@ -196,7 +204,7 @@
             <h2>Keno</h2>
             <div class="image-container">
               <img
-                src="images/keno_screen.gif"
+                src="images/keno_screen.png"
                 alt="Screenshot of Keno project."
                 width="50%"
                 loading="lazy"
@@ -231,7 +239,7 @@
             <h2>Game of Life</h2>
             <div class="image-container">
               <img
-                src="images/conways_screen.gif"
+                src="images/conways_screen.png"
                 alt="Screenshot of Conway's Game of Life project."
                 width="50%"
                 loading="lazy"
