--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           </li>
         </ul>
       </nav>
+
       <div id="particles-js"></div>
       <header id="header" class="header valign">
         <div class="section-content">
@@ -68,12 +69,6 @@
     <section id="about" class="valign">
       <div class="section-content">
         <h1>About</h1>
-        <!-- <p style="text-align: center">
-          <strong
-            >I'm an engineer and software developer located in Los Angeles,
-            USA.</strong
-          >
-        </p> -->
         <p>
           Hello there 🙋🏽‍♂️! I'm Chris, an engineer and software developer located
           in Los Angeles, USA. I create websites and apps.
@@ -108,9 +103,9 @@
         </p>
         <p><strong>Work</strong></p>
         <p>
-          I'm currently open to freelance or full-time opportunities in the Los
-          Angeles area (or remote opportunities). If you think I'd be a good fit
-          for a job you can contact me on
+          I'm currently open to opportunities in the Los Angeles area (or remote
+          opportunities). If you think I'd be a good fit for a job you can
+          contact me on
           <a
             href="https://twitter.com/hawkeyesmichris"
             target="_blank"
@@ -200,7 +195,10 @@
               accounts (right now I'm not allowing logins as I add content).
             </p>
             <p>
-              <i> Tech Used: React, Next.js, NextAuth.js, Material-UI </i>
+              <i>
+                Tech Used: React, Next.js, NextAuth.js, MongoDB, KaTeX,
+                Material-UI, Jest
+              </i>
             </p>
             <div class="link-container">
               <a
@@ -516,9 +514,18 @@
           >
         </div>
         <div>
-          <p>
-            &#169; 2021 | Created and designed with 💚 by Chris Lopez in pure
-            HTML, CSS, and JavaScript.
+          <p style="text-align: center">
+            &#169; 2021 | Created and designed with 💚, 🍜, and 🐳 by Chris
+            Lopez.
+          </p>
+          <p style="text-align: center">
+            Code for this portfolio is available on
+            <a
+              href="https://github.com/chrislopez28/portfolio-plain"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Github</a
+            >.
           </p>
         </div>
       </div>
