--- a/index.html
+++ b/index.html
@@ -415,9 +415,10 @@
           <strong>Software Developer</strong> from March 2020 - present
           <ul>
             <li>
-              Building web applications with a focus on performance,
-              accessibility, and best practices.
+              Working on design, code, and content for EngineerLearn and
+              BookBegins projects.
             </li>
+            <li>Develop web applications for freelance clients</li>
           </ul>
         </div>
         <div class="experience-container">
