Minor grammar fix (plural of an acronym that ends in S)

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p>
           I specialize in web development and can work on both the frontend and
           backend. Some of the tools and technologies that I've been using
-          lately include React, Next.js, Express, MongoDB, and headless CMS. In
+          lately include React, Next.js, Express, MongoDB, and headless CMSs. In
           addition to web dev, I also like analyzing data and working with GIS.
         </p>
         <p>
