--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <li class="nav-item" onclick="toggleMenu(this)">
             <a href="#projects">Projects</a>
           </li>
-          <li class="nav-item" onclick="toggleMenu(this)">
+          <!-- <li class="nav-item" onclick="toggleMenu(this)">
             <a href="#experience">Experience</a>
-          </li>
+          </li> -->
           <li class="nav-item" onclick="toggleMenu(this)">
             <a href="#contact">Contact</a>
           </li>
@@ -58,9 +58,6 @@
       <header id="header" class="header valign">
         <div class="section-content">
           <h1 class="text-white">Chris Lopez</h1>
-          <h2 style="color: white">
-            Software developer with a focus on web development
-          </h2>
         </div>
       </header>
       <img id="top-border" src="images/web-border.png" alt="" />
@@ -70,49 +67,8 @@
       <div class="section-content">
         <h1>About</h1>
         <p>
-          Hello there 🙋🏽‍♂️! I'm Chris, an engineer and software developer located
-          in Los Angeles, USA. I create websites and apps.
-        </p>
-        <p><strong>Background</strong></p>
-        <p>
-          I specialize in web development and can work on both the frontend and
-          backend. Some of the tools and technologies that I've been using
-          lately include React, Next.js, Express, MongoDB, and headless CMSs. In
-          addition to web dev, I also like analyzing data and working with GIS.
-        </p>
-        <p>
-          I'm a career changer. Previously, I worked as an environmental
-          engineer focusing on
-          <a href="https://en.wikipedia.org/wiki/Watershed_management"
-            >watershed protection</a
-          >
-          🏞️ and
-          <a href="https://en.wikipedia.org/wiki/Environmental_monitoring"
-            >monitoring data</a
-          >
-          📉. In this line of work I had some opportunities to create apps and
-          automate data analyses with code. I loved these experiences so much
-          that I took the plunge to leave a good career and a great group of
-          people to focus on software development. It was/is scary going into
-          the unknown, but I feel like it's been very rewarding thus far!
-        </p>
-        <p>
-          As for interests, I enjoy reading books and perusing book stores 📚,
-          keeping up with Eiichiro Oda's masterpiece One Piece 🏴‍☠️, and chasing
-          around my two-year old son 👶.
-        </p>
-        <p><strong>Work</strong></p>
-        <p>
-          I'm currently open to opportunities in the Los Angeles area (or remote
-          opportunities). If you think I'd be a good fit for a job you can
-          contact me on
-          <a
-            href="https://twitter.com/hawkeyesmichris"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Twitter</a
-          >
-          or via the <a href="#contact">Contact</a> form on this site.
+          Hello there 🙋🏽‍♂️! I'm Chris, a software developer located
+          in Los Angeles, USA.
         </p>
       </div>
     </section>
@@ -137,11 +93,7 @@
             </div>
             <p>
               A game based on SET®, which is my favorite card game that has some
-              interesting maths behind it (see
-              <a href="https://www-cs-faculty.stanford.edu/~knuth/programs.html"
-                >here some programs</a
-              >
-              Donald Knuth made based on the game).
+              interesting maths behind it.
             </p>
             <p>
               <i>
@@ -180,19 +132,8 @@
               />
             </div>
             <p>
-              An educational website for engineers in the US studying for their
-              FE and PE exams. It'll focus mainly on the FE exam and potentially
-              the civil and chemical PE exams (since I have experience with both
-              of those). Kind of like a
-              <a
-                href="https://projecteuler.net"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Project Euler</a
-              >
-              for engineers, but the problems are a lot more straightforward.
-              Users will be able to login (OAuth) through their Google or GitHub
-              accounts (right now I'm not allowing logins as I add content).
+              A prototype for an educational website for engineers in the US studying for their
+              FE and PE exams. 
             </p>
             <p>
               <i>
@@ -215,15 +156,6 @@
         <div class="project-container">
           <div class="project-description">
             <h2>Rubik's Slide</h2>
-            <!-- <div class="image-container">
-              <video width="60%" controls>
-                <source
-                  src="images/rubiks_slide_screen.webm"
-                  type="video/webm"
-                />
-                Video not supported
-              </video>
-            </div> -->
             <div class="image-container">
               <img
                 src="images/rubiks_slide.PNG"
@@ -272,9 +204,8 @@
               />
             </div>
             <p>
-              I'm an avid reader. This site displays the opening line(s) of some
-              famous books, plays, and poems. Can you identify the literary
-              work?
+              Simple game that displays the opening line(s) from some
+              famous books, plays, and poems.s
             </p>
             <p>
               <i> Tech Used: React, FastAPI (Python), REST</i>
@@ -311,8 +242,7 @@
               />
             </div>
             <p>
-              A basic keno game that I enjoyed making. Built with no frameworks
-              / libraries.
+              A basic keno game built in JS.
             </p>
             <p>
               <i> Tech Used: HTML, CSS, JavaScript</i>
@@ -349,8 +279,7 @@
               />
             </div>
             <p>
-              An implementation of Conway's Game of Life that I made to
-              practice. Built with no frameworks / libraries.
+              An implementation of Conway's Game of Life.
             </p>
             <p>
               <i> Tech Used: HTML, CSS, JavaScript</i>
@@ -373,90 +302,9 @@
             </div>
           </div>
         </div>
-
-        <!-- <div class="project-container">
-          <div class="project-description">
-            <h2>Kebabs</h2>
-            <p>
-              A lightweight Python package for converting strings to kebab-case.
-            </p>
-            <div>
-              <img
-                src="https://travis-ci.com/chrislopez28/kebabs.svg?branch=main"
-              />
-              <a href="https://codecov.io/gh/chrislopez28/kebabs">
-                <img
-                  src="https://codecov.io/gh/chrislopez28/kebabs/branch/main/graph/badge.svg?token=1VY7MANTD3"
-                /> </a
-              ><br />
-              <div class="link-container">
-                <a
-                  class="link-button"
-                  href="https://github.com/chrislopez28/kebabs"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Github</a
-                >
-              </div>
-            </div>
-          </div>
-        </div> -->
       </div>
     </section>
 
-    <div class="divider">
-      <hr />
-    </div>
-
-    <section id="experience" class="valign">
-      <div class="section-content">
-        <h1>Experience</h1>
-        <div class="experience-container">
-          <strong>Software Developer</strong> from March 2020 - present
-          <ul>
-            <li>
-              Working on design, code, and content for EngineerLearn and
-              BookBegins projects.
-            </li>
-            <li>Develop web applications for freelance clients</li>
-          </ul>
-        </div>
-        <div class="experience-container">
-          <strong>Water Resource Control Engineer</strong> at California
-          Environmental Protection Agency from April 2016 - March 2020
-          <ul>
-            <li>
-              Worked in a team of scientists, geologists, and engineers that
-              implemented programs to reduce pollution from stormwater and
-              improve water sustainability.
-            </li>
-            <li>
-              Developed several scripts to analyze water quality data [R, Shiny,
-              Python, VBA, ArcGIS]
-            </li>
-            <li>
-              Built and maintained an officewide database and intranet site to
-              track issuance of permits, replacing a paper-based system [PHP,
-              JavaScript, MySQL].
-            </li>
-            <li>
-              Founded an office group that focused on data analysis and coding.
-            </li>
-          </ul>
-        </div>
-        <div class="experience-container">
-          <strong>Environmental Scientist</strong> at California Environmental
-          Protection Agency from June 2010 - April 2016
-          <ul>
-            <li>
-              Worked in a team of technical and legal staff that developed and
-              brought forward enforcement cases against environmental polluters.
-              Personally worked on over 50 cases.
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
     <div class="divider">
       <hr />
     </div>
