--- a/index.html
+++ b/index.html
@@ -121,6 +121,38 @@
 
         <div class="project-container">
           <div class="project-description">
+            <h2>Nomadland Mileage Visualization</h2>
+            <div class="image-container">
+              <img
+                src="images/nomadland.jpg"
+                alt="Screenshot of Nomadland Data Viz."
+                width="75%"
+                loading="lazy"
+                onclick="window.open(this.src)"
+              />
+            </div>
+            <p>
+              A little visualization that tracks Fern's journey (and miles traveled) in the film Nomadland.
+            </p>
+            <p>
+              <i>
+                Tech Used: D3, Google Maps API
+              </i>
+            </p>
+            <div class="link-container">
+              <a
+                class="link-button"
+                href="https://observablehq.com/@chrislopez28/places-in-the-film-nomadland"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Link</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <div class="project-container">
+          <div class="project-description">
             <h2>EngineerLearn</h2>
             <div class="image-container">
               <img
