--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="project-container">
           <div class="project-description">
-            <h2>Nomadland Mileage Visualization</h2>
+            <h2>Nomadland Mileage</h2>
             <div class="image-container">
               <img
                 src="images/nomadland.jpg"
