Changed section scrolling hyperlinks to use scrollIntoView() instead of the ids in the href attribute

--- a/index.html
+++ b/index.html
@@ -37,19 +37,16 @@
         </div>
         <ul class="nav-items">
           <li class="nav-item" onclick="toggleMenu(this)">
-            <a href="#">Home</a>
+            <a href="javascript:void(0)" onclick="scrollToSection('home')">Home</a>
           </li>
           <li class="nav-item" onclick="toggleMenu(this)">
-            <a href="#about">About</a>
+            <a href="javascript:void(0)" onclick="scrollToSection('about')">About</a>
           </li>
           <li class="nav-item" onclick="toggleMenu(this)">
-            <a href="#projects">Projects</a>
+            <a href="javascript:void(0)" onclick="scrollToSection('projects')">Projects</a>
           </li>
-          <!-- <li class="nav-item" onclick="toggleMenu(this)">
-            <a href="#experience">Experience</a>
-          </li> -->
           <li class="nav-item" onclick="toggleMenu(this)">
-            <a href="#contact">Contact</a>
+            <a href="javascript:void(0)" onclick="scrollToSection('contact')">Contact</a>
           </li>
         </ul>
       </nav>
